--- a/frontend/src/components/shared/Card/Card.module.css
+++ b/frontend/src/components/shared/Card/Card.module.css
@@ -5,7 +5,11 @@
   background: #1d1d1d;
   padding: 30px;
   border-radius: 20px;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  /* text-align: center; */
 }
 
 .headingWrapper {
